// Vitest Snapshot v1

exports[`Tabs > props > : defaultValue 1`] = `
<div
  class="t-tabs t-size-m"
>
  <div
    class="t-sticky"
    style="height: 0px;"
  >
    <div
      class="t-sticky__content"
      style="z-index: 99;"
    >
      
      <div
        class="t-tabs__nav"
      >
        <div
          class="t-tabs__scroll t-tabs__scroll--top t-tabs__scroll--line"
        >
          <div
            class="t-tabs__wrapper t-tabs__wrapper--line"
          >
            
            
            <div
              class="t-tabs__track t-tabs__track--top"
              style=""
            />
          </div>
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="t-tabs__content"
  >
    
    
  </div>
</div>
`;

exports[`Tabs > props > : sticky 1`] = `
<div
  class="t-tabs t-size-m"
>
  <div
    class="t-sticky"
    style="height: 0px;"
  >
    <div
      class="t-sticky__content"
      style="z-index: 99; position: fixed; top: 0px;"
    >
      
      <div
        class="t-tabs__nav"
      >
        <div
          class="t-tabs__scroll t-tabs__scroll--top t-tabs__scroll--line"
        >
          <div
            class="t-tabs__wrapper t-tabs__wrapper--line"
          >
            
            
            <div
              class="t-tabs__track t-tabs__track--top"
              style=""
            />
          </div>
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="t-tabs__content"
  >
    
    
  </div>
</div>
`;

exports[`Tabs > props > : value 1`] = `
<div
  class="t-tabs t-size-m"
>
  <div
    class="t-sticky"
    style="height: 0px;"
  >
    <div
      class="t-sticky__content"
      style="z-index: 99;"
    >
      
      <div
        class="t-tabs__nav"
      >
        <div
          class="t-tabs__scroll t-tabs__scroll--top t-tabs__scroll--line"
        >
          <div
            class="t-tabs__wrapper t-tabs__wrapper--line"
          >
            
            
            <div
              class="t-tabs__track t-tabs__track--top"
              style=""
            />
          </div>
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="t-tabs__content"
  >
    
    
  </div>
</div>
`;

exports[`Tabs > slots > : panel 1`] = `
<div
  class="t-tabs t-size-m"
>
  <div
    class="t-sticky"
    style="height: 0px;"
  >
    <div
      class="t-sticky__content"
      style="z-index: 99;"
    >
      
      <div
        class="t-tabs__nav"
      >
        <div
          class="t-tabs__scroll t-tabs__scroll--top t-tabs__scroll--line"
        >
          <div
            class="t-tabs__wrapper t-tabs__wrapper--line"
          >
            
            <div
              class="t-tabs__item t-tabs__item--top t-tabs__item--evenly t-tabs__item--active t-tabs__item--line"
            >
              <t-badge>
                <div
                  class="t-tabs__item-inner t-tabs__item-inner--line"
                >
                  <div>
                    标签一
                  </div>
                </div>
              </t-badge>
              <!--v-if-->
              <!--v-if-->
            </div>
            
            <div
              class="t-tabs__track t-tabs__track--top"
              style=""
            />
          </div>
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="t-tabs__content"
  >
    
    <div
      class="t-tab-panel t-tabs__panel"
      value="1"
    >
      
      
      <p>
        标签一内容
      </p>
      
      
    </div>
    
  </div>
</div>
`;
